# mistral-ocr

./: .gitignore  README.md  pyproject.toml
mistral_ocr/: main.py  web.py
