[project]
name = "mistral-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "Karl",email = "niuchong893184@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai (>=1.5.1,<2.0.0)",
    "markdown (>=3.7,<4.0)",
    "click (>=8.1.8,<9.0.0)"
]

[project.scripts]
mistral-ocr = "mistral_ocr.main:ocr_pdf"

[tool.poetry]
packages = [
    { include = "mistral_ocr" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="/Users/niuchong/miniforge3/envs/"
venv="ai"